# MedResident-Tutor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260714_0001_initial_schema.py
apps/backend/app/: main.py  models.py
apps/backend/app/ai/grading/: __init__.py
apps/backend/app/ai/ingestion/: __init__.py
apps/backend/app/ai/knowledge_graph/: __init__.py
apps/backend/app/ai/providers/: base.py  external.py  factory.py  mock.py
apps/backend/app/ai/rag/: router.py  schemas.py  service.py
apps/backend/app/ai/retrieval/: base.py  mock.py
apps/backend/app/api/v1/: router.py  system.py
apps/backend/app/common/: enums.py  models.py  schemas.py
apps/backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
apps/backend/app/modules/auth/: dependencies.py  repository.py  router.py  schemas.py  service.py
apps/backend/app/modules/documents/: models.py  repository.py  router.py  schemas.py  service.py
apps/backend/app/modules/exams/: models.py
apps/backend/app/modules/progress/: models.py
apps/backend/app/modules/questions/: models.py
apps/backend/app/modules/recommendations/: models.py
apps/backend/app/modules/specialties/: models.py
apps/backend/app/modules/topics/: models.py  repository.py  router.py  schemas.py  service.py
apps/backend/app/scripts/: seed.py
apps/backend/app/storage/: base.py  local.py
apps/backend/tests/: conftest.py  test_api.py
docs/: architecture.md  (+2 more)
(+47 files in other folders)
