[project]
name = "medical-resident-learning-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<0.117",
  "uvicorn[standard]>=0.35,<0.36",
  "sqlalchemy[asyncio]>=2.0.41,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.16,<1.17",
  "pgvector>=0.4,<0.5",
  "pydantic-settings>=2.10,<2.11",
  "email-validator>=2.2,<2.3",
  "PyJWT>=2.10,<2.11",
  "pwdlib[argon2]>=0.2,<0.3",
  "python-multipart>=0.0.20,<0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<8.5",
  "pytest-asyncio>=1.0,<1.1",
  "httpx>=0.28,<0.29",
  "aiosqlite>=0.21,<0.22",
  "ruff>=0.12,<0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

